--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <div>
         <p>This is just a test page that's going to have a few different tags so that you can practice selecting them with CSS.</p>
     </div>
+    <img src="ted.jpg" class="ted">
     <div class="alert-text">
         This could be some alert text because its wrapped in a div that has a class called "alert-text"
     </div>
